[package]
name = "onion-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.13.2"
bevy_egui = "0.27.0"
bevy_kira_audio = "0.19.0"
bevy_web_asset = "0.8.0"
rand = "0.8.5"
wasm-bindgen = "0.2"
wasm-cookies = "0.2.1"

[[bin]]
name="engine_local"
path = "src/lib.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
# optimize for size.
opt-level = "s"

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"
